# graphics

./: CMakeLists.txt
res/: convert.py  fragment_shader.glsl  vertex_shader.glsl
res/scripts/: convert_shaders.py
src/: main.c  render.c  render.h  shaderdata.h  spritedata.h
